Добавил возможность создавать заметку

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,1 @@
-img src="/assets/Alexander-Nevsky.jpg" width="200px"
-span.title JlAXTI-OXOBA.Dump
+.new-note-link = link_to 'New note', new_note_path
