--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,6 @@ html
 
   body
     footer
-      img src="/assets/Alexander-Nevsky.jpg" width="200px"
+      img src="#{ asset_path('Alexander-Nevsky.jpg') }" width="200px"
       span.page-title JlAXTI-OXOBA.Dump
     = yield
