Добавил закреп файла к заметке

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,12 @@
  *= require_self
  */
 
- .page-title {
+.page-title {
   font-size: 50px;
   vertical-align: top;
   margin: 20px;
+}
+
+.home-link {
+  margin-top: 10px;
 }
