--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,1 +1,2 @@
-.new-note-link = link_to 'New note', new_note_path
+.menu-link = link_to 'New note', new_note_path
+.menu-link = link_to 'Note list', notes_path
