--- a/app/views/notes/_note.html.slim
+++ b/app/views/notes/_note.html.slim
@@ -3,3 +3,6 @@ tr
     .cell.title = note.title
   td 
     .cell.body = note.body
+  td
+    - note.attachments.each do |a|
+      div = link_to a.file.identifier, a.file.url 
