Изменил тему всего приложения

--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -10,3 +10,12 @@
 .cell.body {
   max-width: 600px;
 }
+
+.form-control{
+  width: 300px;
+}
+
+.remove_fields, .add_fields {
+  font-size: 20px;
+  color:#839496;
+}
