--- a/app/views/notes/_attachment_fields.html.slim
+++ b/app/views/notes/_attachment_fields.html.slim
@@ -1,6 +1,4 @@
 .nested-fields
-  .field
-    p = f.label :file
   .field   
-    p = f.file_field :file
-  = link_to_remove_association "remove attachment", f  
+    p = f.file_field :file, class: 'form-control-file'
+  = link_to_remove_association "remove attachment", f
