--- a/app/views/notes/_form.html.slim
+++ b/app/views/notes/_form.html.slim
@@ -13,17 +13,17 @@
   div class="field"
     = f.label :title
     br
-    = f.text_field :title
+    = f.text_field :title, class: 'form-control'
 
   div class="field"
     = f.label :body
     br
-    = f.text_area :body
+    = f.text_area :body, class: 'form-control'
     
-  p Attachments:
+  h3 Attachments:
   .links
      = link_to_add_association 'add attachment', f, :attachments
      
   div class="actions"
     br
-    = f.submit
+    = f.submit class: 'btn btn-secondary'
