--- a/app/views/notes/index.html.slim
+++ b/app/views/notes/index.html.slim
@@ -1,7 +1,7 @@
 h1 Notes
-table border = "1" rules="all"
+table class="table table-hover" border = "1" rules="all"
   thead
-    tr
+    tr class="table-secondary"
       th Title
       th Body
       th Attachments
