--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,3 @@
-.menu-link = link_to 'New note', new_note_path
-.menu-link = link_to 'Note list', notes_path
+.menu
+  = button_to 'New note', new_note_path, method: :get, class: 'btn btn-secondary'
+  = button_to 'Note list', notes_path, method: :get, class: 'btn btn-secondary'
