Сделал сайт более адаптивным(наверно)

--- a/app/views/notes/_attachment_fields.html.slim
+++ b/app/views/notes/_attachment_fields.html.slim
@@ -1,4 +1,5 @@
 .nested-fields
-  .field   
-    p = f.file_field :file, class: 'form-control-file'
+  .field.file-field   
+      = f.file_field :file, { multiple: true, class: 'form-control-file' }
+      .drop-label Drop Here
   = link_to_remove_association "remove attachment", f
