--- a/app/views/notes/index.html.slim
+++ b/app/views/notes/index.html.slim
@@ -1,10 +1,11 @@
-h1 Notes
-table class="table table-hover" border = "1" rules="all"
-  thead
-    tr class="table-secondary"
-      th Title
-      th Body
-      th Attachments
+.page 
+  h1 Notes
+  table class="table table-hover" border = "1" rules="all"
+    thead
+      tr class="table-secondary"
+        th Title
+        th Body
+        th Attachments
 
-  tbody
-    = render @notes
+    tbody
+      = render @notes
