--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,3 +1,4 @@
-.menu
-  = button_to 'New note', new_note_path, method: :get, class: 'btn btn-secondary'
-  = button_to 'Note list', notes_path, method: :get, class: 'btn btn-secondary'
+.page
+  .menu
+    = button_to 'New note', new_note_path, method: :get, class: 'btn btn-secondary'
+    = button_to 'Note list', notes_path, method: :get, class: 'btn btn-secondary'
