--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,16 @@
   font-size: 40px;
 }
 
+footer {
+  border-bottom: 2px #839496 solid;
+}
+
+.page {
+  margin: 0 50px 0 50px;
+}
+
 .home-link {
   width: 75px;
   display: inline-block;
+  margin: 5px ;
 }
