--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -1,3 +1,10 @@
+* { font-size: 20px }
+
+body {
+  color:#839496;
+  background: #002B36;
+}
+
 .cell {
   margin: 10px;
   word-wrap: break-word
@@ -12,10 +19,41 @@
 }
 
 .form-control{
-  width: 300px;
+  width: 100%;
+  height: 48px;
+  padding: 12px;
+  font-size: 20px;
+  background: #A9BDBD;
 }
 
 .remove_fields, .add_fields {
-  font-size: 20px;
+  font-size: 25px;
   color:#839496;
+}
+
+.file-field {
+  position: relative;
+}
+
+.form-control-file {
+  height: 150px;
+  border: 2px #839496 dashed;
+}
+
+.drop-label {
+  font-size: 30px;
+  position: absolute;
+  margin: auto;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  width: 150px;
+  height: 35px;
+}
+
+.btn {
+  font-size: 25px;
+  width: 100%;
+  height: 50px;
 }
