--- a/app/views/notes/_form.html.slim
+++ b/app/views/notes/_form.html.slim
@@ -11,12 +11,12 @@
                 = message
 
   div class="field"
-    = f.label :title
+    = f.label :title, class: 'form-label'
     br
     = f.text_field :title, class: 'form-control'
 
   div class="field"
-    = f.label :body
+    = f.label :body, class: 'form-label'
     br
     = f.text_area :body, class: 'form-control'
     
