Сделал перенос ссылки по символам, чтоб таблица не вылезала за границы и убрал 'Drop Here' так-как это иногда криво отображается(надо делать свой drag and drop)

--- a/app/views/notes/_note.html.slim
+++ b/app/views/notes/_note.html.slim
@@ -3,6 +3,6 @@ tr class="table-dark"
     .cell.title = note.title
   td 
     .cell.body = note.body
-  td
+  td class="attachment-cell"
     - note.attachments.each do |a|
       div = link_to a.file.identifier, a.file.url 
