--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -40,20 +40,12 @@ body {
   border: 2px #839496 dashed;
 }
 
-.drop-label {
-  font-size: 30px;
-  position: absolute;
-  margin: auto;
-  top: 0px;
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
-  width: 150px;
-  height: 35px;
-}
-
 .btn {
   font-size: 25px;
   width: 100%;
   height: 50px;
+}
+
+.attachment-cell {
+  word-break: break-all;
 }
