--- a/app/views/notes/_note.html.slim
+++ b/app/views/notes/_note.html.slim
@@ -3,6 +3,7 @@ tr class="table-dark"
     .cell.title = note.title
   td 
     .cell.body = note.body
-  td class="attachment-cell"
-    - note.attachments.each do |a|
-      div = link_to a.file.identifier, a.file.url 
+  td
+    ul
+      - note.attachments.each do |a|
+        li = link_to 'download', a.file.url 
