Нафиг всё сделал перенос по символам, мне норм

--- a/app/views/notes/_note.html.slim
+++ b/app/views/notes/_note.html.slim
@@ -1,7 +1,7 @@
 tr class="table-dark"
-  td 
+  td class="titile-cell"
     .cell.title = note.title
-  td 
+  td class="body-cell"
     .cell.body = note.body
   td
     ul
