--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,12 +7,14 @@ html
     = javascript_include_tag "application"
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-
+      
   body
     footer
       .home-link = link_to welcome_index_path do
         img src="#{ asset_path('Alexander-Nevsky.png') }" width="75px"
-      
-      span.page-title JlAXTI-OXOBA.Dump
-    = yield
+      audio.radio-nevski
+        source src = 'Nevski.mp3'
 
+      span.page-title JlAXTI-OXOBA.Dump
+      img.nevski-play src="#{ asset_path('music.png') }" width="50px"
+    = yield
