Автоудаление аттачмента и изправлен баг с музыкой

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
       .home-link = link_to welcome_index_path do
         img src="#{ asset_path('Alexander-Nevsky.png') }" width="75px"
       audio.radio-nevski
-        source src = 'Nevski.mp3'
+        source src = '/Nevski.mp3'
 
       span.page-title JlAXTI-OXOBA.Dump
       img.nevski-play src="#{ asset_path('music.png') }" width="50px"
