--- a/app/views/notes/index.html.slim
+++ b/app/views/notes/index.html.slim
@@ -1,11 +1,4 @@
 .page
-  h1 Notes
-  table class="table table-hover" border = "1" rules="all"
-    thead
-      tr class="table-secondary"
-        th Title
-        th Body
-        th Attachments
-
-    tbody
-      = render @notes
+  h1.note-page-title Notes
+  .notes-list
+    = render @notes
