--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -2,3 +2,4 @@
   .menu
     = button_to 'New note', new_note_path, method: :get, class: 'btn btn-secondary'
     = button_to 'Note list', notes_path, method: :get, class: 'btn btn-secondary'
+    = button_to 'Change Log', change_log_index_path, method: :get, class: 'btn btn-secondary'
