Добавил ссылку на github проекта

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -3,3 +3,7 @@
     = button_to 'New note', new_note_path, method: :get, class: 'btn btn-secondary'
     = button_to 'Note list', notes_path, method: :get, class: 'btn btn-secondary'
     = button_to 'Change Log', change_log_index_path, method: :get, class: 'btn btn-secondary'
+    = button_to 'Github', 'https://github.com/Dencher12/JlAXTI-OXOBA.Dump', method: :get, class: 'btn btn-secondary'
+
+
+
